--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": "^5.6",
+        "php": ">=5.6",
         "zendframework/zend-eventmanager": "~2.2",
         "zendframework/zend-http": "~2.2",
         "zendframework/zend-mvc": "~2.2",
