--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": ">=5.6",
         "zendframework/zend-eventmanager": "~2.2",
         "zendframework/zend-http": "~2.2",
-        "zendframework/zend-mvc": "~2.2",
+        "zendframework/zend-mvc-i18n": "^1.0",
         "zendframework/zend-servicemanager": "~2.2"
     },
     "autoload": {
