--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
     ],
     "require": {
         "php": ">=5.6",
-        "zendframework/zend-eventmanager": "~2.2",
-        "zendframework/zend-http": "~2.2",
+        "zendframework/zend-eventmanager": "^2.6.2 || ^3.0",
+         "zendframework/zend-http": "^2.5.4",
         "zendframework/zend-mvc-i18n": "^1.0",
-        "zendframework/zend-servicemanager": "~2.2"
+        "zendframework/zend-servicemanager": "^2.7.5 || ^3.0.3"
     },
     "autoload": {
        "psr-4": {
