Rewrite to use Zend\Cache
- Uses Zend\Cache instead of self-created storage engine
- Updates getUserIp to support proxies
- Also sends headers when returning an exception
- Updated factories to be compatible with newer versions of Zend
- Updates configuration to make more sense

--- a/config/rate_limit.global.php.dist
+++ b/config/rate_limit.global.php.dist
@@ -8,22 +8,22 @@
 return [
     'rate_limit' => [
         /**
-         * Set the list of allowed routes. Example: api*.
+         * Set the list of routes that should be subject to rate limiting. Example: api*.
          */
         'routes' => [],
 
         /**
-         * You needs configure Storage instance.
+         * This should be an array compatible with Zend Cache.
          */
-        'storage' => '',
+        'storage' => [],
 
         /**
-         * Set limit of requests.
+         * Maximum number of requests per time period (configured below)
          */
         'limit' => 5,
 
         /**
-         * Set the rate limit period duration.
+         * Set the rate limit period duration (in seconds).
          */
         'period' => 30,
     ]
