--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "zendframework/zend-eventmanager": "^2.6.2 || ^3.0",
         "zendframework/zend-http": "^2.5.4",
         "zendframework/zend-mvc-i18n": "^1.0",
-        "zendframework/zend-servicemanager": "^2.7.5 || ^3.0.3"
+        "zendframework/zend-servicemanager": "^2.7.5 || ^3.0.3",
+        "zendframework/zend-cache": "^2.7.1",
     },
     "autoload": {
        "psr-4": {
