--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "zendframework/zend-http": "^2.5.4",
         "zendframework/zend-mvc-i18n": "^1.0",
         "zendframework/zend-servicemanager": "^2.7.5 || ^3.0.3",
-        "zendframework/zend-cache": "^2.7.1",
+        "zendframework/zend-cache": "^2.7.1"
     },
     "autoload": {
        "psr-4": {
